# claudex

./: .gitattributes  .gitignore  README.md  install.sh  pyproject.toml
claudex/: __init__.py  cli.py  constants.py  exceptions.py
claudex/commands/: doctor.py
claudex/core/: auth.py  config.py  profile.py  session.py
claudex/history/: browser.py  models.py  parser.py
claudex/platform/: __init__.py  base.py  file_backend.py  keyring_backend.py
claudex/shell/: __init__.py  base.py  bash.py  powershell.py
claudex/tui/: app.py  theme.py
claudex/tui/screens/: auth_manager.py  dashboard.py  history.py  settings.py
tests/integration/: test_cli.py
tests/unit/: test_parser.py  test_profile.py  test_shell.py
